5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1585_2905.log
== SUBMITION (2019-03-25 13:38:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * sqrt()

a = float(input("farofa de banana"))
b = float(input("farofa de jaba"))
c = float(input("farofa de ovo"))
s = (a+ b+ c)/2
a1 = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(a1,5))


-- EXECUTION TIME:
0.208998
-- ERROR:
  File "/home/codebench/codes/1585/2905/main.py", line 4
    from math import * sqrt()
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:38:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * sqrt

a = float(input("farofa de banana"))
b = float(input("farofa de jaba"))
c = float(input("farofa de ovo"))
s = (a+ b+ c)/2
a1 = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(a1,5))


-- ERROR:
File "XXXX", line 4
    from math import * sqrt
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:39:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import  sqrt

a = float(input("farofa de banana"))
b = float(input("farofa de jaba"))
c = float(input("farofa de ovo"))
s = (a+ b+ c)/2
a1 = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(a1,5))


-- EXECUTION TIME:
0.16866
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
